[package]
name = "base58-cli"
version = "0.1.0"
edition = "2024"
authors = ["Dax <dax@mnply.money>"]
description = "A CLI tool to encode/decode Base58 strings like Solana"

[dependencies]
bs58 = "0.5.1"
clap = { version = "4.5.41", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
